--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
   <style>
     html,body{height:100%;margin:0;font-family:system-ui,-apple-system,"Segoe UI",sans-serif}
     #app{display:flex;height:100vh;width:100vw;overflow:hidden;position:relative}
-    #map{flex:2;min-width:50%}
+    #map{
+      flex:2;min-width:50%;
+      /* ✅ متغيرات التحكم بحجم اللّيبل (تتغير تلقائياً عبر JS) */
+      --label-scale: 1;
+      --label-font: 8px;
+      --label-py: 1px;
+      --label-px: 4px;
+    }
 
     #side-panel{
       flex:1;
@@ -28,25 +35,21 @@
       background:#f8f9fb;
       position:relative;
       transition:width .3s ease,max-width .3s ease,flex-basis .3s ease;
-      overflow:visible; /* مهم حتى الزر يبقى ظاهر */
+      overflow:visible;
     }
 
-    /* ✅ تحسين: عند الطي البانل لا يأخذ مساحة داخل flex والخريطة تتمدد */
+    /* ✅ عند الطي البانل لا يأخذ مساحة داخل flex والخريطة تتمدد */
     #side-panel.collapsed{
       width:0 !important;
       max-width:0 !important;
       flex:0 0 0 !important;
       border-left:none;
       padding:0;
-      opacity:1;             /* خلّي الزر واضح */
-      pointer-events:auto;   /* خلّي زر الطي يعمل */
+      opacity:1;
+      pointer-events:auto;
     }
-
-    /* إخفاء محتوى البانل عند الطي مع إبقاء زر الطي */
     #side-panel.collapsed #panel-header,
-    #side-panel.collapsed #panel-content{
-      display:none;
-    }
+    #side-panel.collapsed #panel-content{display:none}
 
     #toggle-panel{
       position:absolute;
@@ -63,7 +66,6 @@
       z-index:1000;
     }
     #toggle-panel:hover{background:#f2f4fb}
-
     #toggle-icon{display:block;width:20px;height:20px;transition:transform .3s ease}
     #side-panel.collapsed #toggle-icon{transform:rotate(180deg)}
 
@@ -111,16 +113,23 @@
     .legend .swatch{width:14px;height:14px;border-radius:4px;border:1px solid rgba(0,0,0,.15);flex:none}
     .legend .label{font-size:.78rem;color:#222;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 
+    /* ✅ تسمية أصغر جداً + Auto-scale حسب الزوم */
     .polygon-label{
-      background:rgba(255,255,255,.85);
-      border:1px solid #1f78b4;
+      background:rgba(255,255,255,.80);
+      border:1px solid rgba(31,120,180,.85);
       border-radius:6px;
-      padding:2px 6px;
-      font-size:11px;font-weight:600;
+
+      font-size: var(--label-font);
+      padding: var(--label-py) var(--label-px);
+
+      font-weight:600;
       color:#1f78b4;
       white-space:nowrap;
       pointer-events:none;
-      box-shadow:0 1px 4px rgba(0,0,0,.15)
+      box-shadow:0 1px 4px rgba(0,0,0,.10);
+
+      transform: translateZ(0) scale(var(--label-scale));
+      transform-origin: center;
     }
 
     @media (max-width:900px){
@@ -128,7 +137,6 @@
       #map{height:50vh;flex:none;min-width:0}
       #side-panel{max-width:100%;height:50vh;border-left:none;border-top:1px solid #ddd}
 
-      /* ✅ تحسين للموبايل: عند الطي يصبح البانل ارتفاعه 0 والخريطة 100vh */
       #app.panel-collapsed #map{height:100vh !important}
       #app.panel-collapsed #side-panel{height:0 !important;border-top:none}
 
@@ -222,6 +230,28 @@
     maxZoom:19,attribution:"&copy; OpenStreetMap"
   }).addTo(map);
 
+  /* ✅ Auto-scale للتسميات (أصغر حجم مع بقاء التكيف) */
+  function clamp(v,min,max){ return Math.max(min, Math.min(max, v)); }
+  function updateLabelScale(){
+    var z = map.getZoom();
+
+    // ✅ أصغر جداً مع بقاء التدرّج
+    var font  = clamp(5 + (z - 7) * 0.30, 5, 8);      // px
+    var scale = clamp(0.55 + (z - 7) * 0.04, 0.55, 0.90);
+
+    var py = clamp(0.1 + (z - 7) * 0.04, 0.1, 0.8);
+    var px = clamp(2.0 + (z - 7) * 0.12, 2.0, 4.5);
+
+    var el = map.getContainer();
+    el.style.setProperty('--label-font',  font.toFixed(1) + 'px');
+    el.style.setProperty('--label-scale', scale.toFixed(3));
+    el.style.setProperty('--label-py',    py.toFixed(1) + 'px');
+    el.style.setProperty('--label-px',    px.toFixed(1) + 'px');
+  }
+  updateLabelScale();
+  map.on('zoomend', updateLabelScale);
+  map.on('resize', updateLabelScale);
+
   var legendControl=L.control({position:"bottomright"});
   legendControl.onAdd=function(){
     var d=L.DomUtil.create("div","legend leaflet-control");
@@ -268,8 +298,9 @@
       labelsLayer=L.layerGroup().addTo(map);
       addPolygonLabels();
 
-      try{ map.fitBounds(geojsonLayer.getBounds()); }catch(e){}
+      updateLabelScale();
 
+      try{ map.fitBounds(geojsonLayer.getBounds()); }catch(e){}
       setChartsPlaceholder();
     })
     .catch(function(error){
@@ -344,7 +375,6 @@
 
     h+='</div>';
     layer.bindPopup(h,{maxWidth:340}).openPopup(latlng);
-
     try{ map.fitBounds(layer.getBounds(),{padding:[18,18]}); }catch(e){}
   }
 
@@ -456,7 +486,7 @@
     if(geojsonLayer){ try{ map.fitBounds(geojsonLayer.getBounds()); }catch(e){} }
   });
 
-  /* ✅ تحسين: زر طي/فتح البانل + تمدد الخريطة بالكامل + invalidateSize */
+  /* ✅ زر طي/فتح البانل + تمدد الخريطة بالكامل + invalidateSize */
   document.getElementById("toggle-panel").addEventListener("click",function(){
     var panel=document.getElementById("side-panel");
     var app=document.getElementById("app");
@@ -464,7 +494,7 @@
     panel.classList.toggle("collapsed");
     app.classList.toggle("panel-collapsed");
 
-    setTimeout(function(){ map.invalidateSize(); }, 260);
+    setTimeout(function(){ map.invalidateSize(); updateLabelScale(); }, 260);
   });
 
   function syncMapFieldSelect(keepSelectionIfPossible){
@@ -614,7 +644,6 @@
 
     var dist=computeDistribution(activeMapField);
     var labels=dist.series.map(function(x){ return x[0]; });
-
     if(!labels.includes("No data")) labels.push("No data");
 
     labels.forEach(function(lbl,i){
