--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <!-- ✅ Turf.js لتوليد نقاط داخل المضلعات -->
   <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
 
-  <!-- ✅ Font Awesome لأيقونة الشخص -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 
   <style>
@@ -27,12 +26,12 @@
       flex:2;min-width:50%;
       /* ✅ متغيرات التحكم بحجم اللّيبل (تتغير تلقائياً عبر JS) */
       --label-scale: 1;
-      --label-font: 8px;
+      --label-font: 10px; /* ✅ كبّرنا الأساس */
       --label-py: 1px;
       --label-px: 4px;
 
-      /* ✅ متغير حجم أيقونة الشخص (Dot Density) */
-      --dot-size: 14px;
+      /* ✅ متغير حجم النقطة (Dot Density) */
+      --dot-size: 4px;
     }
 
     #side-panel{
@@ -84,7 +83,7 @@
     #panel-content{padding:10px 16px 16px;overflow-y:auto;flex:1}
 
     .section-title{font-size:.95rem;font-weight:800;margin:10px 0 6px;color:#333}
-    #info-text{font-size:.85rem;color:#555;background:#fff;padding:10px;border-radius:10px;box-shadow:0 0 0 1px #e1e4ea;margin-bottom:10px;line-height:1.6}
+    #info-text{font-size:.85rem;color:#555;background:#fff;padding:10px;border-radius:10px;box-shadow:0 0 0 1px #e1e4ea;margin-bottom:10px;line-height:1.6; font-weight:900;}
     .box{background:#fff;border-radius:10px;box-shadow:0 0 0 1px #e1e4ea;padding:10px;margin-bottom:10px;position:relative}
     #attributes-table{width:100%;border-collapse:collapse;font-size:.85rem;overflow:hidden}
     #attributes-table th,#attributes-table td{padding:4px 8px;border-bottom:1px solid #eee;vertical-align:top}
@@ -133,35 +132,36 @@
     .legend .swatch{width:14px;height:14px;border-radius:4px;border:1px solid rgba(0,0,0,.15);flex:none}
     .legend .label{font-size:.78rem;color:#222;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 
-    /* ✅ تسمية أصغر جداً + Auto-scale حسب الزوم */
+    /* ✅ التسمية: نص أسود + Halo = 3px + حجم تلقائي عبر JS */
     .polygon-label{
-      background:rgba(255,255,255,.80);
-      border:1px solid rgba(31,120,180,.85);
-      border-radius:6px;
+      background:transparent;
+      border:none;
+      box-shadow:none;
+      padding:0;
       font-size: var(--label-font);
-      padding: var(--label-py) var(--label-px);
-      font-weight:600;
-      color:#1f78b4;
+      font-weight:900;
+      color:#000; /* ✅ نص أسود */
       white-space:nowrap;
       pointer-events:none;
-      box-shadow:0 1px 4px rgba(0,0,0,.10);
-      transform: translateZ(0) scale(var(--label-scale));
-      transform-origin: center;
+      line-height:1.1;
+      /* ✅ Halo 3px (أبيض) حول النص الأسود */
+      text-shadow:
+        1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff,
+        2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff,
+        3px 0 0 #fff, -3px 0 0 #fff, 0 3px 0 #fff, 0 -3px 0 #fff,
+        1px 1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+        2px 2px 0 #fff, -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff;
+      transform-origin:center;
+      will-change: transform, font-size;
     }
 
-    /* ✅ أيقونة الشخص للنقاط (Dot Density) */
-    .person-dot{
-      font-size: var(--dot-size);
-      color:#2457c6;
-      filter: drop-shadow(0 1px 1px rgba(0,0,0,.25));
-      line-height:1;
-    }
-    .person-dot-wrap{
-      width: calc(var(--dot-size) + 2px);
-      height: calc(var(--dot-size) + 2px);
-      display:flex;
-      align-items:center;
-      justify-content:center;
+    /* ✅ Dot Density: نقاط حمراء دائرية صغيرة (Responsive) */
+    .red-dot-wrap{
+      width: var(--dot-size);
+      height: var(--dot-size);
+      border-radius:50%;
+      background:#e31a1c;
+      box-shadow: 0 0 0 1px rgba(0,0,0,.28);
       pointer-events:none;
     }
 
@@ -210,11 +210,10 @@
 
     <div id="panel-content">
       <div id="info-text">
-        1) اختر طبقة الخريطة (دهوك أو هولير).<br/>
-        2) اختر حقلاً/حقولاً من القائمة.<br/>
-        3) حدّد <b>Top N</b> لعدد الشرائح.<br/>
-        4) اختر حقل تلوين الخريطة واضغط تطبيق.<br/>
-        5) ✅ يمكنك اختيار <b>Dot Density</b>: كل نقطة = 1.
+        * WebMap Developted By : .<br/>
+               DR.SAMEER S> AKREYI 
+                 07504527139.<br/>
+        
       </div>
 
       <div class="box">
@@ -227,6 +226,11 @@
           <button class="layer-btn" data-layer="hawler">
             <div style="font-size:.95rem">📍 هولير</div>
             <div style="font-size:.75rem;color:inherit;opacity:.8">Hawler</div>
+          </button>
+
+          <button class="layer-btn" data-layer="sulaymaniyah">
+            <div style="font-size:.95rem">📍 السليمانية</div>
+            <div style="font-size:.75rem;color:inherit;opacity:.8">Sulaymaniyah</div>
           </button>
         </div>
         <div id="loading-indicator" class="loading-overlay" style="display:none">
@@ -244,7 +248,6 @@
 
         <div class="section-title" style="margin-top:12px">تحكم العرض</div>
 
-        <!-- ✅ جديد: تحكم التسميات + وضع الترميز -->
         <div style="display:flex;flex-direction:column;gap:8px;margin-bottom:8px">
           <label style="display:flex;gap:8px;align-items:center;font-size:.9rem">
             <input type="checkbox" id="toggle-labels" checked />
@@ -297,7 +300,8 @@
 <script>
   var geojsonLayers = {
     duhok: "https://raw.githubusercontent.com/sdmnet/KRG_layer/refs/heads/main/duhok_section.geojson",
-    hawler: "https://raw.githubusercontent.com/sdmnet/KRG_layer/refs/heads/main/hawler.geojson"
+    hawler: "https://raw.githubusercontent.com/sdmnet/KRG_layer/refs/heads/main/hawler.geojson",
+    sulaymaniyah: "https://raw.githubusercontent.com/sdmnet/KRG_layer/refs/heads/main/soolimany.geojson"
   };
 
   var currentLayer = "duhok";
@@ -307,36 +311,79 @@
     maxZoom:19,attribution:"&copy; OpenStreetMap"
   }).addTo(map);
 
-  /* ✅ Auto-scale للتسميات */
+  /* ✅ Auto-scale للتسميات (تعديل حجم التسمية فقط) */
   function clamp(v,min,max){ return Math.max(min, Math.min(max, v)); }
+
+  var __labelBaseFont = 10.0;   // ✅ أكبر
+  var __labelBaseScale = 1.00;  // ✅ أكبر
+
   function updateLabelScale(){
     var z = map.getZoom();
-    var font  = clamp(5 + (z - 7) * 0.30, 5, 8);
-    var scale = clamp(0.55 + (z - 7) * 0.04, 0.55, 0.90);
-    var py = clamp(0.1 + (z - 7) * 0.04, 0.1, 0.8);
-    var px = clamp(2.0 + (z - 7) * 0.12, 2.0, 4.5);
+    var vw = window.innerWidth || 1200;
+    var wFactor = clamp(vw / 1200, 0.85, 1.15);
+
+    /* ✅ تكبير مدى أحجام اللّيبل */
+    var font  = clamp((7.0 + (z - 7) * 0.55) * wFactor, 7.0, 15.0);
+    var scale = clamp((0.75 + (z - 7) * 0.08) * wFactor, 0.70, 1.45);
+
+    __labelBaseFont = font;
+    __labelBaseScale = scale;
 
     var el = map.getContainer();
     el.style.setProperty('--label-font',  font.toFixed(1) + 'px');
     el.style.setProperty('--label-scale', scale.toFixed(3));
-    el.style.setProperty('--label-py',    py.toFixed(1) + 'px');
-    el.style.setProperty('--label-px',    px.toFixed(1) + 'px');
+
+    updateLabelPerPolygonScale();
   }
 
-  /* ✅ Auto-scale لأيقونة الشخص (Dot Density) */
+  function pxAreaFromBounds(bounds){
+    try{
+      var ne = bounds.getNorthEast();
+      var sw = bounds.getSouthWest();
+      var p1 = map.latLngToContainerPoint(ne);
+      var p2 = map.latLngToContainerPoint(sw);
+      var w = Math.abs(p1.x - p2.x);
+      var h = Math.abs(p1.y - p2.y);
+      return w * h;
+    }catch(e){
+      return 0;
+    }
+  }
+
+  function updateLabelPerPolygonScale(){
+    if(!labelsLayer) return;
+    labelsLayer.eachLayer(function(marker){
+      if(!marker || !marker._polyBounds) return;
+      var el = marker.getElement ? marker.getElement() : null;
+      if(!el) return;
+      var labelEl = el.querySelector('.polygon-label');
+      if(!labelEl) return;
+
+      var a = pxAreaFromBounds(marker._polyBounds);
+      var f = clamp(0.70 + 0.12 * Math.log10(Math.max(10, a) / 500), 0.65, 1.35);
+
+      var finalFont  = clamp(__labelBaseFont * f, 7.0, 16.0);
+      var finalScale = clamp(__labelBaseScale * f, 0.70, 1.50);
+
+      labelEl.style.fontSize = finalFont.toFixed(1) + 'px';
+      labelEl.style.transform = 'translateZ(0) scale(' + finalScale.toFixed(3) + ')';
+    });
+  }
+
+  /* ✅ Auto-scale للنقاط (Dot Density) — كما هو */
   function updateDotIconSize(){
     var z = map.getZoom();
     var vw = window.innerWidth || 1200;
-    var wFactor = clamp(vw / 1200, 0.75, 1.15);
-    var size = clamp((10 + (z - 7) * 1.8) * wFactor, 10, 22);
-    map.getContainer().style.setProperty('--dot-size', size.toFixed(1) + 'px');
+    var wFactor = clamp(vw / 1200, 0.85, 1.10);
+    var size = clamp((2.6 + (z - 7) * 0.45) * wFactor, 2.2, 6.0);
+    map.getContainer().style.setProperty('--dot-size', size.toFixed(2) + 'px');
   }
 
   updateLabelScale();
   updateDotIconSize();
   map.on('zoomend', function(){ updateLabelScale(); updateDotIconSize(); });
   map.on('resize', function(){ updateLabelScale(); updateDotIconSize(); window.setTimeout(updateDotIconSize, 50); });
-  window.addEventListener('resize', updateDotIconSize);
+  window.addEventListener('resize', function(){ updateLabelScale(); updateDotIconSize(); });
 
   var legendControl=L.control({position:"bottomright"});
   legendControl.onAdd=function(){
@@ -352,7 +399,7 @@
     if(renderMode === 'dot' && activeMapField){
       this._div.innerHTML =
         '<div class="legend-title">Dot Density — '+escapeHTML(activeMapField)+'</div>' +
-        '<div class="legend-sub">كل <b>أيقونة شخص</b> = 1 (القيمة داخل كل مضلع).</div>';
+        '<div class="legend-sub">كل <b>نقطة حمراء</b> = 1 (القيمة داخل كل مضلع).</div>';
       return;
     }
 
@@ -373,15 +420,12 @@
   var topN=10,binsCount=5,activeMapField="";
   var valueToColor=new Map(),numericBins=null;
 
-  /* ✅ جديد */
   var showLabels = true;
   var renderMode = 'choropleth'; // choropleth | dot
   var dotLayer = L.layerGroup().addTo(map);
 
-  // تهيئة الطبقة الأولى
   loadLayer(currentLayer);
 
-  // تبديل الطبقات
   document.querySelectorAll('.layer-btn').forEach(function(btn){
     btn.addEventListener('click', function(){
       var layerName = this.getAttribute('data-layer');
@@ -393,7 +437,6 @@
     });
   });
 
-  // ✅ Toggle labels
   document.getElementById('toggle-labels').addEventListener('change', function(){
     showLabels = !!this.checked;
     if(!labelsLayer) return;
@@ -401,26 +444,19 @@
     else labelsLayer.clearLayers();
   });
 
-  // ✅ Render mode
   document.getElementById('render-mode').addEventListener('change', function(){
     renderMode = this.value;
     applyRenderMode();
   });
 
   function applyRenderMode(){
-    // تحديث ستايل الخريطة
     if(geojsonLayer) geojsonLayer.setStyle(baseStyle);
     if(selectedLayer) selectedLayer.setStyle(highlightStyle());
 
-    // تحديث الرموز
-    if(renderMode === 'dot'){
-      generateDotDensity();
-    }else{
-      clearDotDensity();
-    }
+    if(renderMode === 'dot') generateDotDensity();
+    else clearDotDensity();
 
-    // تحديث الـ Legend
-    recolorMapByActiveField(); // سيحدّث الـ Legend أيضاً حسب وضع العرض
+    recolorMapByActiveField();
   }
 
   function loadLayer(layerName) {
@@ -510,7 +546,6 @@
   }
 
   function baseStyle(feature){
-    // ✅ إذا وضع Dot Density: خلي المضلعات خفيفة (حدود فقط تقريباً)
     if(renderMode === 'dot'){
       return {color:"#1f78b4",weight:1.2,fillColor:"#ffffff",fillOpacity:.08};
     }
@@ -574,7 +609,7 @@
       var av=props?props[activeMapField]:"";
       h+='<div style="margin-top:8px;padding:6px;background:#e6f0ff;border-radius:6px;color:#2457c6"><b>حقل التلوين:</b> '+escapeHTML(activeMapField)+' = '+escapeHTML(av==null?"":String(av))+'</div>';
       if(renderMode==='dot'){
-        h+='<div style="margin-top:6px;color:#666;font-size:12px">Dot Density: كل أيقونة = 1</div>';
+        h+='<div style="margin-top:6px;color:#666;font-size:12px">Dot Density: كل نقطة = 1</div>';
       }
     }
 
@@ -666,7 +701,6 @@
     buildChartsForSelectedFields(selectedFields);
     recolorMapByActiveField();
 
-    // ✅ تطبيق وضع العرض
     applyRenderMode();
 
     if(selectedLayer) selectedLayer.setStyle(highlightStyle());
@@ -696,7 +730,6 @@
     if(geojsonLayer){ try{ map.fitBounds(geojsonLayer.getBounds()); }catch(e){} }
   });
 
-  /* ✅ زر طي/فتح البانل */
   document.getElementById("toggle-panel").addEventListener("click",function(){
     var panel=document.getElementById("side-panel");
     var app=document.getElementById("app");
@@ -867,7 +900,6 @@
 
     geojsonLayer.setStyle(baseStyle);
 
-    // ✅ إذا Dot Density: الـ legend سيكون خاص بالنقاط
     if(renderMode === 'dot'){
       legendControl.update([], activeMapField);
       return;
@@ -919,26 +951,32 @@
 
       try{
         var layer=L.geoJSON(feature);
-        var center=layer.getBounds().getCenter();
+        var bounds = layer.getBounds();
+        var center=bounds.getCenter();
+
         var label=L.marker(center,{
-          icon:L.divIcon({className:'polygon-label',html:escapeHTML(String(labelText)),iconSize:null})
+          icon:L.divIcon({
+            className:'',
+            html:'<div class="polygon-label">'+escapeHTML(String(labelText))+'</div>',
+            iconSize:null
+          }),
+          interactive:false
         });
+
+        label._polyBounds = bounds;
         labelsLayer.addLayer(label);
       }catch(e){
         console.warn("Could not add label:",e);
       }
     });
+
+    updateLabelScale();
   }
 
-  /* =========================
-     ✅ Dot Density (كل نقطة = 1)
-     ========================= */
-  function clearDotDensity(){
-    dotLayer.clearLayers();
-  }
+  /* Dot Density */
+  function clearDotDensity(){ dotLayer.clearLayers(); }
 
   function hashString(str){
-    // hash بسيط لتثبيت توزيع النقاط
     var h = 2166136261;
     for (var i=0;i<str.length;i++){
       h ^= str.charCodeAt(i);
@@ -959,24 +997,17 @@
     if(v===null || v===undefined || v==="") return null;
     var n = (typeof v === 'number') ? v : Number(v);
     if(!isFinite(n) || isNaN(n)) return null;
-    // ✅ كل نقطة = 1، لذلك نستخدم عدد صحيح
     return Math.max(0, Math.round(n));
   }
 
-  function personIcon(){
-    // لاحظ: حجم الأيقونة يتم من CSS variable --dot-size
-    return L.divIcon({
-      className: '',
-      html: '<div class="person-dot-wrap"><i class="fa-solid fa-user person-dot"></i></div>',
-      iconSize: null
-    });
+  function redDotIcon(){
+    return L.divIcon({ className:'', html:'<div class="red-dot-wrap"></div>', iconSize:null });
   }
 
   function generateDotDensity(){
     clearDotDensity();
     if(!geojsonData || !activeMapField) return;
 
-    // حماية أداء (يمكنك رفعها إذا كانت بياناتك صغيرة)
     var MAX_TOTAL_DOTS = 25000;
     var MAX_DOTS_PER_POLY = 4000;
 
@@ -997,12 +1028,12 @@
       if(count <= 0) break;
 
       try{
-        var bbox = turf.bbox(f); // [minX,minY,maxX,maxY]
+        var bbox = turf.bbox(f);
         var rng = makeRNG(hashString(String(activeMapField)+"|"+String(i)));
 
         var points = [];
         var attempts = 0;
-        var maxAttempts = Math.max(200, count * 25); // رفض-قبول داخل المضلع
+        var maxAttempts = Math.max(200, count * 25);
 
         while(points.length < count && attempts < maxAttempts){
           attempts++;
@@ -1014,10 +1045,10 @@
           }
         }
 
-        // رسم النقاط
+        var icon = redDotIcon();
         for(var p=0;p<points.length;p++){
-          var c = points[p].geometry.coordinates; // [lng,lat]
-          var m = L.marker([c[1], c[0]], { icon: personIcon(), interactive:false });
+          var c = points[p].geometry.coordinates;
+          var m = L.marker([c[1], c[0]], { icon: icon, interactive:false });
           dotLayer.addLayer(m);
         }
 
@@ -1027,7 +1058,6 @@
       }
     }
 
-    // تحديث Legend
     legendControl.update([], activeMapField);
   }
 
